--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -11,6 +11,10 @@ http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd">
         <welcome-file>index.jsp</welcome-file>
     </welcome-file-list>
  
+ 	<context-param>
+ 		<param-name>contextConfigLocation</param-name>
+ 		<param-value>/WEB-INF/config/applicationContext.xml,/WEB-INF/config/spring-security.xml</param-value>
+ 	</context-param>
       <!-- 该监听器将在Web容器启动时激活Spring -->
     <listener>
         <listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
@@ -20,6 +24,22 @@ http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd">
     <listener>
         <listener-class>org.springframework.web.util.IntrospectorCleanupListener</listener-class>
     </listener>
+    
+      <filter>
+
+      <filter-name>springSecurityFilterChain</filter-name>
+
+     <filter-class>org.springframework.web.filter.DelegatingFilterProxy</filter-class>
+
+   </filter>
+
+   <filter-mapping>
+
+      <filter-name>springSecurityFilterChain</filter-name>
+
+      <url-pattern>/*</url-pattern>
+
+   </filter-mapping>
  
       <!--configure the setting of springmvcDispatcherServlet and configure the mapping-->
     <servlet>
